kubernetes/kopia/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kopia-direct
  namespace: homelab
spec:
  type: LoadBalancer
  selector:
    app: kopia
  ports:
  - port: 51515
    targetPort: 51515
