kubernetes/kopia/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kopia
  namespace: homelab
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - backup.sigilos.st
    secretName: backup-sigilos-st-tls
  rules:
  - host: backup.sigilos.st
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kopia
            port:
              number: 51515
